several changes fixed card alignment of left column, added the city name and current salaries for positions by city and state, fixed logo path

--- a/src/components/search_results.css
+++ b/src/components/search_results.css
@@ -55,4 +55,5 @@
 .leftColumn{
     margin-right: 1%;
     margin-left: 0.5%; 
+    vertical-align: top;
 }
